will it fix the annoying whitespace?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,12 @@
 html{
     scroll-behavior: smooth;
 }
+html, body {
+
+    padding: 0;
+    
+    margin: 0;
+    
+    }
+    
+    
